--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,6 +7,7 @@ body { font-size: 16px; }
   margin: 2em 0
 }
 
+.api-title strong { color: #e96900; }
 
 .markdown-section {max-width: none;}
 @media screen and (min-width: 800px) {
