--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -133,5 +133,9 @@ body { font-size: 16px; }
 }
 .sidebar .sidebar-nav {
   overflow-y: scroll;
-  height: 80%;
+  height: 100%;
+}
+
+.algolia-autocomplete {
+    width: 100%;
 }
