--- a/docs/.vuepress/override.styl
+++ b/docs/.vuepress/override.styl
@@ -1,3 +1,5 @@
+$contentWidth = 980px;
+
 .api-box {
   background: #fff;
   border: 1px solid #eee;
@@ -7,6 +9,13 @@
 .api-box .api-heading {
   background: #f8f8f8;
   padding: 1rem 1rem 1rem;
+}
+
+.api-anchor {
+    display: block;
+    position: relative;
+    top: -4.0em;
+    visibility: hidden;
 }
 
 .simple-summary p {
