--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,5 +1,3 @@
-$contentWidth = 980px;
-
 .api-box {
   background: #fff;
   border: 1px solid #eee;
@@ -120,10 +118,6 @@ $contentWidth = 980px;
   margin: -0.5em 0;
 }
 
-.example pre {
-  margin: 0 0;
-}
-
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Sans+Pro:300,400,600");
 * {
   -webkit-font-smoothing: antialiased;
@@ -145,17 +139,7 @@ code .token {
   min-height: 24px;
   min-height: 1.5rem;
 }
-pre:after {
-  color: #ccc;
-  content: attr(data-lang);
-  font-size: 9.6px;
-  font-size: 0.6rem;
-  font-weight: 600;
-  height: 15px;
-  line-height: 15px;
-  padding: 5px 10px 0;
-  position: absolute;
-  right: 0;
-  text-align: right;
-  top: 0;
-}
+
+div[class~="language-csharp"]
+  &:before
+    content "c#"
